# swc-plugin-barrel-files

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  todo.md  tsconfig.json  types.d.ts
.cargo/: config.toml
.changeset/: chubby-games-show.md  clever-wings-work.md  config.json  few-ends-look.md  many-news-cry.md  mighty-ends-find.md  pink-mugs-drive.md  rare-cooks-tap.md  silly-beds-reply.md  wide-regions-do.md  witty-zoos-wait.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  release.yml
perf/: generate-fixtures.ts  run.ts
src/: alias_resolver.rs  cache.rs  config.rs  import_transformer.rs  lib.rs  path_resolver.rs  paths.rs  pattern_matcher.rs  re_export.rs  resolver.rs  visitor.rs
swc-plugin/: Cargo.toml
swc-plugin/src/: import_transformer.rs  lib.rs  pattern_matcher.rs  re_export.rs  resolver.rs
tests/: swc-transform.test.ts
tests/fixtures/src/features/some/: index.ts  testing.ts
