[package]
name = "swc_plugin_barrel_files"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
once_cell = "1.21.3"
serde = "1"
serde_json = "1"
swc_core = { version = "31.1.0", features = [
    "ecma_plugin_transform",
    "ecma_parser",
] }
pathdiff = "0.2.3"
path-absolutize = { version = "3.1.1", features = ["use_unix_paths_on_wasm"] }
indexmap = "2.10.0"

[dev-dependencies]
testing = "14.0.1"
