[package]
name = "swc_plugin_barrel_files"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
once_cell = "1.21.3"
serde = "1"
serde_json = "1"

indexmap = "2.10.0"

swc_core = { version = "0.87.*", features = ["ecma_plugin_transform", "ecma_parser"] }
swc_ecma_utils = "0.125.4"
pathdiff = "0.2.3"
path-absolutize = { version = "3.1.1", features = ["use_unix_paths_on_wasm"] }
sourcemap = "6.4.1"
swc_common = "=0.33.15"
[dev-dependencies]
testing = "=0.35.14"
