[package]
name = "swc_plugin_barrel_files"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
once_cell = "1.19.0"
regex = "1.10.3"
serde = "1"
serde_json = "1.0.111"
swc_core = { version = "0.87.*", features = ["ecma_plugin_transform", "ecma_quote"] }
swc_ecma_utils = "0.125.4"

[dev-dependencies]
testing = "0.35.14"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
